# amos-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
amos/: CMakeLists.txt  amos-int.c  amos-mangle.h  zairy.f  zasyi.f  zbiry.f  zbknu.f  zkscl.f  zlog.f  zmlri.f  zs1s2.f  zseri.f  zsqrt.f  zunhj.f  zuoik.f
create-test-data/: create_zbesh_test_data.py  create_zbesi_test_data.py  requirements.txt
profiling/: Cargo.toml
profiling/src/: main.rs
src/: amos_errors.rs  bindings.rs  lib.rs  zbesh.rs  zbesi.rs
tests/: test_zbesh.rs  test_zbesi.rs
tests/dat/: zbesh1_e_test.txt  zbesh1_test.txt  zbesh2_e_test.txt  zbesh2_test.txt  zbesi_e_real_test.txt  zbesi_e_test.txt  zbesi_real_test.txt  zbesi_test.txt
