set(SRC
    d1mach.f
    xerror.f
    zacon.f
    zbesh.f
    zbesk.f
    zbiry.f
    zbunk.f
    zkscl.f
    zmlt.f
    zseri.f
    zuchk.f
    zuni2.f
    zunk2.f
    dgamln.f
    zabs.f
    zairy.f
    zbesi.f
    zbesy.f
    zbknu.f
    zdiv.f
    zlog.f
    zrati.f
    zshch.f
    zunhj.f
    zunik.f
    zuoik.f
    i1mach.f
    zacai.f
    zasyi.f
    zbesj.f
    zbinu.f
    zbuni.f
    zexp.f
    zmlri.f
    zs1s2.f
    zsqrt.f
    zuni1.f
    zunk1.f
    zwrsk.f
)

add_library(amos ${SRC})
